hphp/hack/test/typecheck/function_pointer/class_meth_interface_inherited.php
<?hh

interface Foo {
  public static function bar(): void;
}

abstract class Child implements Foo {}

function test(): void {
  class_meth(Child::class, 'bar');

  class_meth('Child', 'bar');

  Child::bar<>;
}
